really fix horizontal scrollbar

--- a/emuuromstyle-animations.css
+++ b/emuuromstyle-animations.css
@@ -22,6 +22,7 @@ body {
 	background-size: cover;
 }
 .parallaxWrapper {
+	width: 100vw;
 	height: 60vw;
 	position: relative;
 	overflow: hidden;
