--- a/emuuromstyle.css
+++ b/emuuromstyle.css
@@ -22,7 +22,6 @@ body {
 	background-size: cover;
 }
 .parallaxWrapper {
-	width: 100vw;
 	height: 56vw;
 	position: relative;
 	overflow: hidden;
